--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reminder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://robjj.github.io/grocery-list-helper/",
+  "homepage": "https://robjj.github.io/grocery-helper-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
